plugins/kotlin/idea/tests/testData/checker/diagnosticsMessage/instantiationOfInnerClassInQualifiedForm.fir.kt
class A {
    inner class XYZ

    fun foo() {
        val v: A.XYZ = A.<error descr="[UNRESOLVED_REFERENCE]">XYZ</error>()
    }
}
